--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 - xvfb
 
 install:
-- wget -O fuck-xuexiqiangguo.zip https://dl.fxxk.workers.dev/Fuck%E5%AD%A6%E4%B9%A0%E5%BC%BA%E5%9B%BD-linux.zip
+# - wget -O fuck-xuexiqiangguo.zip https://dl.fxxk.workers.dev/Fuck%E5%AD%A6%E4%B9%A0%E5%BC%BA%E5%9B%BD-linux.zip
 - unzip -q -d ./fuck-xuexiqiangguo/ fuck-xuexiqiangguo.zip
 - chmod +x fuck-xuexiqiangguo/Fuck*
 - mv fuck-xuexiqiangguo/Fuck* fuck-xuexiqiangguo/Fuck
